{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 233,
  "lineage": "a21d1ce4-9f83-d4f8-6825-040d5ee581f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:302238252373:loadbalancer/my-elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "my-elb-923807693.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb",
            "security_groups": [
              "sg-0d265564d293cb6aa"
            ],
            "source_security_group": "302238252373/elb",
            "source_security_group_id": "sg-0d265564d293cb6aa",
            "subnets": [
              "subnet-007ecef870c047893",
              "subnet-0461ab2a17fd4ffa5"
            ],
            "tags": {
              "Name": "my-elb"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_subnet.Public_SN_1",
            "aws_subnet.Public_SN_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:internet-gateway/igw-0a466a2d9fa10de01",
            "id": "igw-0a466a2d9fa10de01",
            "owner_id": "302238252373",
            "tags": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ad19af23386e5ff0",
            "owner_id": "302238252373",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a466a2d9fa10de01",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_SN_1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072317c7669964859",
            "route_table_id": "rtb-0ad19af23386e5ff0",
            "subnet_id": "subnet-007ecef870c047893"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_SN_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_SN_2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08882c553da3a694b",
            "route_table_id": "rtb-0ad19af23386e5ff0",
            "subnet_id": "subnet-0461ab2a17fd4ffa5"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_SN_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_SN_3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fe1fc957d14c032",
            "route_table_id": "rtb-0ad19af23386e5ff0",
            "subnet_id": "subnet-01c9c7d9130c0e25f"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_SN_3",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:security-group/sg-0d265564d293cb6aa",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d265564d293cb6aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb",
            "name_prefix": "",
            "owner_id": "302238252373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:security-group/sg-0501fcdf0a4432829",
            "description": "security group for my instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0501fcdf0a4432829",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d265564d293cb6aa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Instance-SG",
            "name_prefix": "",
            "owner_id": "302238252373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Instance-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SN_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-0d7a9813ee2651942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "70.0.4.0/24",
            "id": "subnet-0d7a9813ee2651942",
            "map_public_ip_on_launch": false,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Private_SN_1"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SN_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-094efd16613ee2514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "70.0.5.0/24",
            "id": "subnet-094efd16613ee2514",
            "map_public_ip_on_launch": false,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Private_SN_2"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_SN_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-075a669a3bed5c7c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "70.0.6.0/24",
            "id": "subnet-075a669a3bed5c7c8",
            "map_public_ip_on_launch": false,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Private_SN_3"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_SN_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-007ecef870c047893",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "70.0.1.0/24",
            "id": "subnet-007ecef870c047893",
            "map_public_ip_on_launch": true,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Public_SN_1"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_SN_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-0461ab2a17fd4ffa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "70.0.2.0/24",
            "id": "subnet-0461ab2a17fd4ffa5",
            "map_public_ip_on_launch": true,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Public_SN_2"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_SN_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:subnet/subnet-01c9c7d9130c0e25f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "70.0.3.0/24",
            "id": "subnet-01c9c7d9130c0e25f",
            "map_public_ip_on_launch": true,
            "owner_id": "302238252373",
            "tags": {
              "Name": "Public_SN_3"
            },
            "vpc_id": "vpc-049ca0b64673029af"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302238252373:vpc/vpc-049ca0b64673029af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "70.0.0.0/16",
            "default_network_acl_id": "acl-00e0096ef8264fb62",
            "default_route_table_id": "rtb-01c97fabc6ab3afaf",
            "default_security_group_id": "sg-0033218dcdc71be25",
            "dhcp_options_id": "dopt-15fb2a7e",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-049ca0b64673029af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01c97fabc6ab3afaf",
            "owner_id": "302238252373",
            "tags": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}